# stm32f103-hal

stm32f103/: Cargo.toml
stm32f103-hal/: Cargo.toml  justfile
stm32f103-hal/examples/: blinky.rs
stm32f103-hal/src/: flash.rs  halt.rs  lib.rs  main.rs  prelude.rs  rcc.rs
stm32f103/src/: generic.rs  lib.rs
stm32f103/src/adc1/: cr1.rs  cr2.rs  dr.rs  htr.rs  jdr1.rs  jdr2.rs  jdr4.rs  jofr1.rs  jofr4.rs  jsqr.rs  ltr.rs  smpr1.rs  sqr2.rs  sqr3.rs
stm32f103/src/adc2/: cr1.rs  dr.rs  jdr3.rs  jofr2.rs  jofr3.rs  smpr2.rs  sqr1.rs  sr.rs
stm32f103/src/afio/: evcr.rs  exticr1.rs  exticr2.rs  exticr3.rs  exticr4.rs  mapr.rs  mapr2.rs
stm32f103/src/bkp/: cr.rs  csr.rs  dr1.rs  dr10.rs  dr11.rs  dr12.rs  dr13.rs  dr14.rs  dr15.rs  dr16.rs  dr17.rs  dr18.rs  dr19.rs  dr2.rs  dr20.rs  dr21.rs  dr22.rs  dr23.rs  dr24.rs  dr25.rs  dr26.rs  dr27.rs  dr28.rs  dr29.rs  dr3.rs  dr30.rs  dr31.rs  dr32.rs  dr33.rs  dr34.rs  dr35.rs  dr36.rs  dr37.rs  dr38.rs  dr39.rs  dr4.rs  dr40.rs  dr41.rs  dr42.rs  dr5.rs  (+5 more)
stm32f103/src/can1/: can_btr.rs  can_esr.rs  can_fa1r.rs  can_ffa1r.rs  can_fm1r.rs  can_fmr.rs  can_fs1r.rs  can_ier.rs  can_mcr.rs  can_msr.rs  can_rdh0r.rs  can_rdh1r.rs  can_rdl0r.rs  can_rdl1r.rs  can_rdt0r.rs  can_rdt1r.rs  can_rf0r.rs  can_rf1r.rs  can_ri0r.rs  can_ri1r.rs  can_tdh0r.rs  can_tdh1r.rs  can_tdh2r.rs  can_tdl0r.rs  can_tdl1r.rs  can_tdl2r.rs  can_tdt0r.rs  can_tdt1r.rs  can_tdt2r.rs  can_ti0r.rs  can_ti1r.rs  can_ti2r.rs  can_tsr.rs  f0r1.rs  f0r2.rs  f10r1.rs  f10r2.rs  f11r1.rs  f11r2.rs  f12r1.rs  (+21 more)
stm32f103/src/crc/: cr.rs  dr.rs  idr.rs
(+397 files in other folders)
